--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body{
     width: 100%;
     height: 100vh;
-    background: linear-gradient(to right bottom,#974006,#eb5c0a);
+    background: linear-gradient(to right bottom,#97067f,#c60aeb);
     color: #fff;
     display: grid;
     place-items: center;
@@ -75,7 +75,7 @@ body{
 }
 
 .choice.selected{
-    background-color: #f16f23;
+    background-color: #cc7dc2;
     color: #fff;
 }
 
@@ -109,7 +109,7 @@ body{
     width: 72px;
     height: 72px;
     border-radius: 50%;
-    background-color: #f16311;   
+    background-color: #f111de;   
     border: 2px solid #000;
     font-size: 24px;
     font-weight: 600;
